fix crash on "close document" in menu of tabs

avoid to delete this during event handling

BUG: 456240